--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="apple-touch-icon" sizes="192x192" href="./images/192x192_App_Icon.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="./images/512x512_App_Icon.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>STOIC | Swap</title>
+    <title>PiggySwap | Swap</title>
     <meta name="description" content="STOIC " />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no" />
     <meta name="twitter:image" content="" />
-    <meta name="twitter:description" content="STOIC " />
+    <meta name="twitter:description" content="PiggySwap " />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="STOIC " />
+    <meta name="twitter:title" content="PiggySwap " />
     <link href="./static/css/3.83e03661.chunk.css" rel="stylesheet" />
 
     <style>
